[package]
name = "synceditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {git = "https://github.com/linebender/druid"}
#druid = {git = "https://github.com/linebender/druid", rev = "fc05e965c85fced8720c655685e02478e0530e94"}
#druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery"}
automerge = {git = "https://github.com/automerge/automerge-rs"}
libp2p = {version = "0.50", features = ["full"]}
serde = "1"
serde_json = "1"
futures = "0.3"
async-std = "1"
anyhow = "1"
