[package]
name = "synceditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8"
automerge = "0.3"
libp2p = {version = "0.50", features = ["full"]}
serde = "1"
serde_json = "1"
futures = "0.3"
async-std = "1"
anyhow = "1"
